backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubewise-service
spec:
  type: NodePort
  selector:
    app: kubewise-backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
