backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubewise-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: kubewise.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubewise-service
            port:
              number: 8000
